Document bb mutate, and what it has already found
Coverage says a line ran. It does not say anything would have noticed had
the line been wrong, which describes every defect this project shipped.